Fixes Projects on small screens.

--- a/css/about.css
+++ b/css/about.css
@@ -105,12 +105,6 @@ hr {
     margin-right: 23px;
   }
   /* Main content and sections */
-  .section .sectionContent {
-    padding: 0;
-    margin-left: 20%;
-    margin-top: 5%;
-    margin-bottom: 5%;
-  }
   .mainContent .externalResourcesNav {
     margin-left: 20%;
     margin-top: 40px;
